Fix button misalignment

--- a/frontend/src/styles/Login.scss
+++ b/frontend/src/styles/Login.scss
@@ -37,8 +37,8 @@
 .login__btn{
   border-radius: 24px;
   border: none;
-  margin: 0.5rem;
   padding: 0.5rem 1rem;
+  margin-bottom: 0.5rem;
   width: 300px;
   background-color: orangered;
   color: white;
